had to update the name of the index file to have a lowercase 'i'

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    background-color: var(--main-bg-color)
+    background-color: var(--main-bg-color);
+    max-width: 850px;
 }
 
 header {
@@ -33,47 +34,53 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    /*align-items:center;*/
-    justify-content: space-between;
-    width: 100%; 
+    /* align-items:center; */
+    /* justify-content: center; */
+    /* width: 100%;  */
+    /* max-width: 850px; */
 }
 
 .box {
-    flex-basis: 33%;
+    flex-basis: 30%;
+    flex: 1 1 200px;
     border-style: dotted;
     border-width: 1px;
     border-color: var(--text-border-color);
     margin: 10px 1px;
-    position: relative;
-    height: 250px;
+    min-width: 250px;
+    /* position: relative; */
+    /* height: 250px; */
 }
 
 .box-second {
-    flex-basis: 33%;
+    flex-basis: 30%;
+    flex: 1 1 200px;
     border-style: dotted;
     border-width: 1px;
     border-color: var(--text-border-color);
-    position: relative;
     margin: 10px 1px;
-    height: 275px;
+    min-width: 250px;
+    /* position: relative; */
+    /* height: 250px; */
 }
 
 .box-p {
     color: var(--text-border-color);
-    margin: 50px 10px 10px 10px;
+    margin: auto;
 
 }
 
 .box-head {
     border-style: solid;
-    /*display: flex; */
+    flex: 1 1 100px;
+    /* display: flex; */
     border-color: var(--text-border-color);
     border-width: 1px;
     background-color: var(--main-bg-color);
     margin-top: -15px;
     width: 200px;
     color: var(--sec-color);
-    position: absolute;
+    /* position: absolute; */
     left: 95px;
     border-radius:5% ;
     
@@ -86,7 +93,22 @@ footer {
     padding: 2px; 
     border-radius: 2%;
     height: 65%;
-    position: relative;
+    min-width: 240px;
+    /* position: absolute; */
+    top: 50;
+    flex: 1 1 190px;
+}
+
+.second-box2 {
+    background: linear-gradient(rgb(121, 13, 5), rgb(247, 67, 54));;
+    margin: 10px 10px 2px 10px;
+    color: var(--text-border-color);
+    padding: 2px; 
+    border-radius: 2%;
+    height: 65%;
+    min-width: 240px;
+    /* position: absolute; */
+    flex: 1 1 190px;
     top: 50;
 }
 
@@ -98,26 +120,25 @@ footer {
 box-shadow: inset 8px 8px 8px pink;
 }
 
-#text {
-    padding-right: 25px;
-    align-self: flex-start;
-    font-size: 25px;
-}
-
 @media screen and (max-width: 992px) {
-    .box {flex-basis: 33%;
-        flex-shrink: 1;
+    .box, .box-second {
+        flex-basis: 50%;
+        flex-direction: column;
     }
 }
 
 @media screen and (max-width: 768) {
-    .box {flex-basis: 48%;
-        flex-shrink: 1;
+    .box .box-second {
+        flex-basis: 100%;
+        flex-direction: column; 
     }
 }
 
-/*@media screen and (max-width: 769px) {
-    .box {flex-basis: 100%;
-        flex-shrink: 1;
-    }
-}*/
+/* @media screen and (max-width: 767px) { */
+/* .box .box-second { */
+        /* flex-direction: column; */
+    /* } */
+/* } */
+
+
+
